add logo and background color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="site-header">
+<header class="site-header" style="background-color: #cd7da0">
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <img src="/logo.svg" width="317" height="147" alt="logo" style="float: left">
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
